# semantic-pdf-search-engine

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  dockerfile  extract_pdf.py  requirements.txt
src/: chunk.rs  chunk__.rs  embed.rs  extract.rs  fuzzy.rs  lib.rs  main.rs  qdrant.rs  render.rs  test.py
static/: _.html  __.html  d.html  index.html  index_.html  render.html  utils.js
static/repl/: render.html
static/webapp/:  render_.html  index.html  render.html  render_.html  render_backup.html  styles.css
